add jambalaya recipe

--- a/recipes/jambalaya.html
+++ b/recipes/jambalaya.html
@@ -7,6 +7,27 @@
 
     <body>
         <h1>Jambalaya</h1>
+        <img src="NoImage.png" />
+        <h2>Description</h2>
+        <p>Sausage and rice. Often has chicken or shrimp too.</p>
+        <p>My recipe just uses lots of sausage. No second meat.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>rice</li>
+            <li>sausage</li>
+            <li>red bell pepper</li>
+            <li>onion</li>
+            <li>garlic</li>
+            <li>spices</li>
+            <li>green onion</li>
+            <li>parsley</li>
+            <li>chicken broth</li>
+        </ul>
+        <h2>Steps</h2>
+        <ul>
+            <li>add ingredients</li>
+            <li>cook 'em</li>
+        </ul>
 
     </body>
 </html>
