--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/jambalaya.html">Jambalaya</a></li>
+            <li><a href="recipes/jambalaya.html">Jambalaya again</a></li>
+            <li><a href="recipes/jambalaya.html">Jambalaya is all I know</a></li>
+        </ul>
+        
 
     </body>
 </html>
